k8s/medicalrecord-namespace/medical-record-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medical-record-service-ingress
  namespace: medicalrecord
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /medical-record
        pathType: Prefix
        backend:
          service:
            name: medical-record-service
            port:
              number: 8083
